[workspace]
members = [
    "src/bin/sdre-hub",
    "src/libraries/libshapi",
    "src/libraries/libshconfig",
    "src/libraries/libsdrehub",
    "src/libraries/libsdrehubcommon",
]

resolver = "2"

[workspace.package]
version = "4.0.0-alpha1"
edition = "2021"
authors = ["Fred Clausen"]
description = "SDR-E Hub is a consumer of ACARS messages from many sources, matching them up with ADSB and other data, and then displaying them in a web interface."
documentation = "https://github.com/sdr-enthusiasts/sdre-hub/README.md"
homepage = "https://github.com/sdr-enthusiasts/sdre-hub"
repository = "https://github.com/sdr-enthusiasts/sdre-hub"
readme = "README.MD"
license = "GPL-3.0"
rust-version = "1.77.2"
keywords = [
    "acars",
    "vdlm",
    "vdlm2",
    "vdl-m2",
    "hfdl",
    "adsb",
    "docker",
    "web",
    "sdr",
    "rtl-sdr",
    "aircraft",
    "airplane",
    "airline",
    "flight",
    "tracking",
    "hub",
    "server",
    "client",
    "frontend",
    "backend",
    "api",
]
categories = ["aerospace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
