[workspace]
members = [
    "src/bin/sdre-hub",
    "src/bin/sh-tauri",
    "src/libraries/sdrehub",
    "src/libraries/sh-api",
    "src/libraries/sh-config",
    "src/libraries/sh-common",
    "src/libraries/sh-common-server",
]
exclude = ["sh-frontend"]

resolver = "2"

[workspace.package]
version = "4.0.0-alpha.1"
edition = "2021"
authors = ["Fred Clausen"]
description = "SDR-E Hub is a consumer of ACARS messages from many sources, matching them up with ADSB and other data, and then displaying them in a web interface."
documentation = "https://github.com/sdr-enthusiasts/sdre-hub/README.md"
homepage = "https://github.com/sdr-enthusiasts/sdre-hub"
repository = "https://github.com/sdr-enthusiasts/sdre-hub"
readme = "README.MD"
license = "MIT"
rust-version = "1.78.0"
keywords = [
    "acars",
    "vdlm",
    "vdlm2",
    "vdl-m2",
    "hfdl",
    "adsb",
    "docker",
    "web",
    "sdr",
    "rtl-sdr",
    "aircraft",
    "airplane",
    "airline",
    "flight",
    "tracking",
    "hub",
    "server",
    "client",
    "frontend",
    "backend",
    "api",
]
categories = ["aerospace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
