[workspace]
members = [
    "src/bin/sdre-hub",
    "src/bin/sh-tauri",
    "src/libraries/sdrehub",
    "src/libraries/sh-api",
    "src/libraries/sh-config",
    "src/libraries/sh-common",
    "src/libraries/sh-common-server",
]
exclude = ["sh-frontend"]

resolver = "2"

[workspace.package]
version = "4.0.0-alpha.1"
edition = "2021"
authors = ["Fred Clausen"]
description = "SDR-E Hub is a consumer of ACARS messages from many sources, matching them up with ADSB and other data, and then displaying them in a web interface."
documentation = "https://github.com/sdr-enthusiasts/sdre-hub/README.md"
homepage = "https://github.com/sdr-enthusiasts/sdre-hub"
repository = "https://github.com/sdr-enthusiasts/sdre-hub"
readme = "README.MD"
license = "MIT"
rust-version = "1.78.0"
keywords = [
    "acars",
    "vdlm",
    "vdlm2",
    "vdl-m2",
    "hfdl",
    "adsb",
    "docker",
    "web",
    "sdr",
    "rtl-sdr",
    "aircraft",
    "airplane",
    "airline",
    "flight",
    "tracking",
    "hub",
    "server",
    "client",
    "frontend",
    "backend",
    "api",
]
categories = ["aerospace"]

[workspace.dependencies]
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full", "tracing"] }
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.21"
figment = { version = "0.10.19", features = ["toml", "env"] }
sdre-rust-logging = "0.3.17"
serde-inline-default = "0.2.3"
void = "1.0.2"
directories = "6.0.0"
tauri = { version = "2.5.0" }


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
