[package]
name = "sh-frontend"
version = "4.0.0-alpha.1"
edition = "2021"
authors = ["Fred Clausen"]
description = "SDR-E Hub is a consumer of ACARS messages from many sources, matching them up with ADSB and other data, and then displaying them in a web interface."
documentation = "https://github.com/sdr-enthusiasts/sdre-hub/README.md"
homepage = "https://github.com/sdr-enthusiasts/sdre-hub"
repository = "https://github.com/sdr-enthusiasts/sdre-hub"
readme = "README.MD"
license = "MIT"
rust-version = "1.78.0"
keywords = [
    "acars",
    "vdlm",
    "vdlm2",
    "vdl-m2",
    "hfdl",
    "adsb",
    "docker",
    "web",
    "sdr",
    "rtl-sdr",
    "aircraft",
    "airplane",
    "airline",
    "flight",
    "tracking",
    "hub",
    "server",
    "client",
    "frontend",
    "backend",
    "api",
]
categories = ["aerospace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-utils = "0.2.0"
leaflet = "0.4.0"
log = "0.4.21"
serde = "1.0.200"
reqwest = { version = "0.12.4", features = ["json"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-hooks = "0.3.1"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlCollection",
    "KeyboardEvent",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
gloo-utils = "0.2.0"
