[package]
name = "sh-frontend"
version = "4.0.0-alpha.1"
edition = "2021"
authors = ["Fred Clausen"]
description = "SDR-E Hub is a consumer of ACARS messages from many sources, matching them up with ADSB and other data, and then displaying them in a web interface."
documentation = "https://github.com/sdr-enthusiasts/sdre-hub/README.md"
homepage = "https://github.com/sdr-enthusiasts/sdre-hub"
repository = "https://github.com/sdr-enthusiasts/sdre-hub"
readme = "README.MD"
license = "MIT"
rust-version = "1.78.0"
keywords = [
    "acars",
    "vdlm",
    "vdlm2",
    "vdl-m2",
    "hfdl",
    "adsb",
    "docker",
    "web",
    "sdr",
    "rtl-sdr",
    "aircraft",
    "airplane",
    "airline",
    "flight",
    "tracking",
    "hub",
    "server",
    "client",
    "frontend",
    "backend",
    "api",
]
categories = ["aerospace"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
gloo = "0.11.0"
gloo-utils = "0.2.0"
leaflet = "0.4.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
reqwasm = "0.5.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-alert = "0.1.0"
yewdux = "0.10.0"
yew-websocket = "1.21.0"
yew-router = "0.18.0"
yew-hooks = "0.3.2"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Element",
    "HtmlCollection",
    "KeyboardEvent",
    "EventTarget",
    "HtmlFormElement",
] }

sh-common = { path = "../src/libraries/sh-common" }
sh-config = { path = "../src/libraries/sh-config" }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
gloo-utils = "0.2.0"

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
