[package]
name = "libsdrehub"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsdrehubcommon = { path = "../libsdrehubcommon" }
log = "0.4.21"
sdrehub_api = { path = "../sdrehub-api" }
sdrehub_config = { path = "../sdrehub-config" }
tokio = { version = "1.37.0", features = ["full", "tracing"] }
