[package]
name = "sdrehub"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full", "tracing"] }
log = "0.4.22"
sh-config = { path = "../sh-config" }
sh-api = { path = "../sh-api" }
sh-common = { path = "../sh-common" }
sh-common-server = { path = "../sh-common-server" }
