[package]
name = "sh-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["ws"] }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sh-common = { path = "../sh-common" }
sh-common-server = { path = "../sh-common-server" }
sh-config = { path = "../sh-config" }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
