[package]
name = "sh-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment = { version = "0.10.19", features = ["toml", "env"] }
sdre-rust-logging = "0.3.6"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde-inline-default = "0.2.2"
toml = "0.8.19"
void = "1.0.2"
directories = "5.0.1"
