[package]
name = "sh-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
figment.workspace = true
sdre-rust-logging.workspace = true
log.workspace = true
serde.workspace = true
serde-inline-default.workspace = true
toml.workspace = true
void.workspace = true
directories.workspace = true
